...
          />
        </>
      }
      footer={
        <>
          <FancyButton
            label={isLastStep ? 'Ver resultado' : 'Continuar'}
            onPress={avancar}
            disabled={selecionado === undefined}
            containerStyle={
              selecionado !== undefined ? { backgroundColor: Pallete.terciary } : undefined
            }
          />
...
